# AgentGuard

./: .env.example  .gitignore  README.md  docker-compose.rocm.yml  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
backend/: Dockerfile  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py  routes_audits.py  routes_policies.py  routes_recommendations.py  schemas.py
backend/app/core/: config.py  constants.py  errors.py  logging.py  middleware.py  prompts.py
backend/app/decision/: __init__.py  decision_engine.py  types.py
backend/app/explainability/: __init__.py  explanation_engine.py
backend/app/llm/: fireworks_client.py  local_rocm_client.py  types.py
backend/app/policies/: default_clinical_policies.yaml
backend/app/prompts/: clinical_agent_prompt.txt  explanation_prompt.txt  verifier_system_prompt.txt
backend/app/services/: audit_service.py  clinical_agent_service.py  llm_service.py  policy_service.py  recommendation_service.py  types.py  verification_service.py
backend/app/storage/: __init__.py  database.py  models.py  repositories.py
backend/app/verification/: __init__.py  base.py  confidence_risk.py  context_validation.py  orchestrator.py  verifier_models.py  (+2 more)
backend/tests/: test_app_import.py  test_decision_engine.py  test_policy_loader.py  test_recommendation_workflow.py  test_repositories.py  test_verification_contracts.py
frontend/: Dockerfile  __init__.py  streamlit_app.py  ui_helpers.py
frontend/pages/: audit_history.py  policy_viewer.py  verification_details.py
(+1 files in other folders)
